--- a/myweather/src/app/app.scss
+++ b/myweather/src/app/app.scss
@@ -14,3 +14,20 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+.main {
+    background: #333b5b;
+    color: #fff;
+}
+
+.temp {
+    font-size: 55px;
+    text-align: center;
+    font-weight: normal;
+}
+
+.location,
+.icon,
+.desc {
+    text-align: center,
+}
