--- a/authapp/app/components/profile/profile.component.html
+++ b/authapp/app/components/profile/profile.component.html
@@ -1,1 +1,13 @@
 <h3>User Profile</h3>
+<h5>Nickname: {{ profile.nickname }}</h5>
+<div class="row">
+    <div class="col-md-2">
+        <img class="thumbnail" src="{{ profile.picture }}" style="width: 100%">
+    </div>
+    <div class="col-md-10">
+        <ul class="list-group">
+            <li class="list-group-item"><strong>Email:</strong> {{ profile.name }}</li>
+            <li class="list-group-item"><strong>Profile Last Updates:</strong> {{ profile.updated_at }}</li>
+        </ul>
+    </div>
+</div>
