--- a/moviefinder/app/components/movies/movies.component.html
+++ b/moviefinder/app/components/movies/movies.component.html
@@ -1,3 +1,35 @@
+<div class="jumbotron">
+    <div class="container">
+        <h1>Find movie</h1>
+            <p>Search for a movie using the form below.</p>
+                <form (submit)="searchMovies()">
+                    <input [(ngModel)]="searchStr" type="text" class="form-control" name="searchStr">
+                    <br>
+                    <button class="btn btn-primary bg-lg">Find</button>
+                </form>
+    </div>
+</div>
+
+
+<div *ngIf="searchRes" class="panel panel-default">
+    <div class="panel-heading">
+        <h3 class="panel-title">Search results</h3>
+    </div>
+    <div class="panel-body">
+        <div class="row">
+            <div *ngFor="let movie of searchRes; let i = index" class="col-md-2">
+                <div *ngIf="i < 18">
+                    <img *ngIf="movie.poster_path" class="thumbnail" src="http://image.tmdb.org/t/p/w500/{{ movie.poster_path}}">
+                    <h4>{{ movie.title }}</h4>
+                        <p>{{ movie.release_date }}</p>
+                        <p><a href="#" class="btn btn-default">View Details</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 <div class="panel panel-default">
     <div class="panel-heading">
         <h3 class="panel-title">Popular movies</h3>
